--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!-- Lucas Cândido Barcelos RA: 2022007290 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mario Jump</title>
+    <title>Mario Game</title>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
     <link
@@ -16,21 +16,14 @@
   </head>
   <body>
     <div class="game-board">
-      <!-- <header>
-        <button id="btn-menu">Menu</button>
-        <ul id="menu">
-          <li>Login</li>
-          <li><button id="btn-mode">Options</button></li>
-          <li>Ranking</li>
-        </ul>
-      </header> -->
-      <img src="./images/mario.webp" class="mario" />
-      <img src="./images/pipe.png" class="pipe" />
-      <img src="./images/clouds.png" class="clouds" />
+      <img src="./images/mario.webp" class="mario" alt="gif do mario correndo"/>
+      <img src="./images/pipe.png" class="pipe" alt="cano do jogo mario"/>
+      <img src="./images/clouds.png" class="clouds" alt="nuvens"/>
       <div class="game-over-message" id="game-over">
         <h1>Game Over</h1>
         <h3 id="score"></h3>
         <button id="play-again">Play again</button>
+        <h3><a href="./explicacao.html">Escolha do projeto</a></h3>
       </div>
     </div>
     <div id="floor"></div>
